--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ li {
   overflow: hidden;
   border: none;
   box-shadow: 0 0 10px rgb(20, 20, 20);
+  white-space: nowrap;
 }
 
 .button:hover {
@@ -101,16 +102,25 @@ form textarea {
 }
 
 /*-----------------------------------------------------------*/
-#root {
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-}
-
 body {
-  display: flex;
   margin: 0px;
   padding: 0px;
+  width: 100vw;
+  max-height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
   font-family: "Signika", sans-serif;
 }
 
@@ -119,7 +129,7 @@ body {
 /* https://pixabay.com/videos/woman-model-notebook-book-creator-130645/
 */
 
-.video-background video {
+video {
   position: absolute;
   top: 0;
   left: 0;
@@ -128,18 +138,6 @@ body {
   object-fit: cover;
   z-index: -1;
   filter: brightness(50%) blur(5px);
-}
-
-/* This element is used to wrapp the total website*/
-#pageWrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-}
-
-#pageWrapper video {
-  width: 100%;
 }
 
 /*********************************************************************************************************************************************/
@@ -227,7 +225,6 @@ ________________________________________________________________________________
   display: flex;
   max-width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 /*********************************************************************************************************************************************/
@@ -270,5 +267,4 @@ ________________________________________________________________________________
 #display-container {
   max-width: 100%;
   height: 100%;
-  overflow: auto;
 }
